src/test/deca/codegen/valid/provided/test_init_a_zero_des_attributs.deca
// DESCRIPTION : on test si l'heritage est bien efeectuer 

class A {
	int x ;
}

{
	A a = new A(); 
	if (a.x == 0) {
		println("je dois etre afficher");
	}
}
